6841742: par compact - remove unused/unsupported options

Ignore UseParallel{OldGCDensePrefix,OldGCCompacting,DensePrefixUpdate}

Reviewed-by: jwilhelm, brutisso